--- a/src/database/utils/FirebaseUtils/firebaseconfigure.json
+++ b/src/database/utils/FirebaseUtils/firebaseconfigure.json
@@ -1,9 +1,9 @@
 {
-    "apiKey": "AIzaSyDbfepRJM62Ivkl3mGxmInBXudSRxD59uw",
-    "authDomain": "schedulesmanager-6eeb0.firebaseapp.com",
-    "projectId": "schedulesmanager-6eeb0",
-    "storageBucket": "schedulesmanager-6eeb0.appspot.com",
-    "messagingSenderId": "889063971019",
-    "appId": "1:889063971019:web:6d0c5ba0f2dd847e80e34e",
-    "measurementId": "G-9M3521WH6M"
-  }
+  "apiKey": "AIzaSyBsxRKM0JYkrltM3-TwaLP6Wp04_Fvk6bo",
+  "authDomain": "schedulesmanager-a19db.firebaseapp.com",
+  "projectId": "schedulesmanager-a19db",
+  "storageBucket": "schedulesmanager-a19db.appspot.com",
+  "messagingSenderId": "506482621471",
+  "appId": "1:506482621471:web:470825948eb4b4d799a92a",
+  "measurementId": "G-1G9QPBNRVG"
+}
