--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "scheduleapis",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "main": "index.js",
-  "experimental-specifier-resolution": "node",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node src/index.js",
-    "dev": "nodemon --experimental-specifier-resolution=node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "admin": "^1.4.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase": "^8.7.1",
+    "firebase": "^8.8.0",
     "firebase-admin": "^9.11.0",
     "helmet": "^4.6.0",
     "monk": "^7.3.4",
